[gd_scene load_steps=8 format=2]

[ext_resource path="res://scenes/slot-button.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/tower-defense-top-down/png/tower-defense_tile227.png" type="Texture2D" id=2]
[ext_resource path="res://assets/sprites/ui/png/ok.png" type="Texture2D" id=3]
[ext_resource path="res://assets/audio/tower-negative-sound.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/fonts/military_font_7/military_font_7.ttf" type="FontFile" id=5]
[ext_resource path="res://resources/theme/theme.tres" type="Theme" id=6]

[sub_resource type="FontFile" id=1]
size = 13
font_data = ExtResource( 5 )

[node name="SlotButton" type="Button"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
toggle_mode = true
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Decoration" type="Sprite2D" parent="."]
visible = false
position = Vector2( 35, 35 )
scale = Vector2( 0.4, 0.4 )
z_index = 1
texture = ExtResource( 3 )

[node name="DecorationBG" type="ColorRect" parent="Decoration"]
show_behind_parent = true
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
mouse_filter = 1
color = Color( 0.513726, 0.529412, 0.588235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TowerName" type="Label" parent="VBoxContainer"]
offset_right = 1600.0
offset_bottom = 22.0
custom_fonts/font = SubResource( 1 )
text = "Bunker"
align = 1
valign = 1

[node name="TowerIcon" type="TextureRect" parent="VBoxContainer"]
offset_top = 26.0
offset_right = 1600.0
offset_bottom = 874.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TowerCost" type="Label" parent="VBoxContainer"]
offset_top = 878.0
offset_right = 1600.0
offset_bottom = 900.0
custom_fonts/font = SubResource( 1 )
text = "100"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="toggled" from="." to="." method="_on_SlotButton_toggled"]
